build: Update build environment.