@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.teletha</groupId>
 	<artifactId>antibug</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.2</version>
 	<packaging>jar</packaging>
 	<name>antibug</name>
 	<description>Bug Detection Tool Set. (including PowerAssert</description>
@@ -88,9 +88,12 @@
 					<compilerId>eclipse</compilerId>
 					<source>15</source>
 					<target>15</target>
+					<testSource>15</testSource>
+					<testTarget>15</testTarget>
 					<encoding>UTF-8</encoding>
 					<compilerArgs>
 						<arg>-proc:none</arg>
+						<arg>--enable-preview</arg>
 					</compilerArgs>
 				</configuration>
 				<dependencies>
